# nqrduck-spectrometer-scout

./: pyproject.toml
src/nqrduck_spectrometer_scout/: controller.py  model.py  scout.py  view.py  widget.py
src/nqrduck_spectrometer_scout/resources/: scout.ini  scout_widget.ui
