[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "nqrduck-spectrometer-scout"
version = "0.0.2"
authors = [
  { name="Julia Pfitzer", email="git@jupfi.me" },
]

description = "A submodule for the nqrduck-spectrometer module which implements the functionality for the Scout spectrometer."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "nqrduck-spectrometer",
    "pyqt5",
]

[project.entry-points."nqrduck"]
"nqrduck-spectrometer-scout" = "nqrduck_spectrometer_scout.scout:Scout"